--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
+    <div class="sp-container">
+        
+    </div>
     
 </body>
 </html>
