--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solve Problems</title>
     <meta name="description" content="The place where you can find challenges to improve your frontend and backend skills.">
+    <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/navbar.css">
 </head>
 <body>
 
     <!-- NAVBAR -->
     <nav>
+        <div class="navbar-logo-container">
+            <a href="" class="navbar-logo">
+                <img src="./assets/logo-light.png" alt="website logo" class="navbar-logo-itself">
+            </a>
+        </div>
+        <div class="navbar-links">
 
+        </div>
+        <div class="navbar-theme"></div>
     </nav>
     
     <!-- SOLVE PROBLEMS CONTAINER -->
