--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             </a>
         </div>
         <div class="navbar-links">
-
+            <a href="" class="navbar-link">Home</a>
+            <a href="" class="navbar-link">Challenges</a>
         </div>
         <div class="navbar-theme"></div>
     </nav>
