--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="" class="navbar-link">Challenges</a>
         </div>
         <div class="navbar-buttons">
+            <hr class="navbar-buttons-divider">
             <button type="button" class="navbar-theme">
                 <svg class="navbar-theme-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
                     <path d="M17 12C17 14.7614 14.7614 17 12 17C9.23858 17 7 14.7614 7 12C7 9.23858 9.23858 7 12 7C14.7614 7 17 9.23858 17 12Z" stroke="currentColor" stroke-width="1.5" />
