--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- NAVBAR -->
     <nav>
         <div class="navbar-logo-container">
-            <a href="" class="navbar-logo">
+            <a href="./" class="navbar-logo">
                 <img src="./assets/logo-light.png" alt="website logo" class="navbar-logo-itself">
             </a>
         </div>
