--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/input.css">
 </head>
 <body>
 
@@ -42,7 +43,7 @@
     <!-- SOLVE PROBLEMS CONTAINER -->
     <div class="sp-container">
         <div class="sp-input">
-            
+
         </div>
         <div class="sp-output"></div>
     </div>
