--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
     <!-- SOLVE PROBLEMS CONTAINER -->
     <div class="sp-container">
-        <div class="sp-input">
+        <div class="sp-container-input">
 
         </div>
         <div class="sp-output"></div>
