--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     
     <!-- SOLVE PROBLEMS CONTAINER -->
     <div class="sp-container">
+        <div class="sp-container-header">
+            <h1 class="sp-header">The place filled with challenges to improve your web-development skills.</h1>
+        </div>
         <div class="sp-container-input">
 
         </div>
