--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             <h1 class="sp-header">The place filled with challenges to improve your web-development skills.</h1>
         </div>
         <div class="sp-container-input">
-
+            <form class="sp-container-input-inner">
+                <input type="text" placeholder="Search for a challenge... e.g., Calculator, Stopwatch." id="searchInput" class="sp-container-input-itself">
+                <button type="button" class="sp-container-input-button" id="searchButton">Search</button>
+            </form>
         </div>
         <div class="sp-output"></div>
     </div>
