--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
     
     <!-- SOLVE PROBLEMS CONTAINER -->
     <div class="sp-container">
-        <div class="sp-container-header">
-            <h1 class="sp-header">The place filled with challenges to improve your web-development skills.</h1>
-        </div>
         <div class="sp-container-input">
+            <div class="sp-container-header">
+                <h1 class="sp-header">The place filled with challenges to improve your web-development skills.</h1>
+            </div>
             <form class="sp-container-input-inner">
                 <input type="text" placeholder="Search for a challenge... e.g., Calculator, Stopwatch." id="searchInput" class="sp-container-input-itself">
                 <button type="submit" class="sp-container-input-button" id="searchButton">Search</button>
             </form>
         </div>
+        <hr class="sp-container-divider">
         <div class="sp-output"></div>
     </div>
     
