--- a/index.html
+++ b/index.html
@@ -51,8 +51,15 @@
                 <button type="submit" class="sp-container-input-button" id="searchButton">Search</button>
             </form>
         </div>
-        <hr class="sp-container-divider">
-        <div class="sp-output"></div>
+        <!-- <hr class="sp-container-divider"> -->
+        <div class="sp-output">
+            <fieldset class="sp-output-inner">
+                <legend class="sp-output-inner-header">Challenges:</legend>
+                <div class="sp-output-themselves">
+                    
+                </div>
+            </fieldset>
+        </div>
     </div>
     
     <script src="./scripts/theme.js"></script>
