--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <fieldset class="sp-output-inner">
                 <legend class="sp-output-inner-header">Challenges:</legend>
                 <div class="sp-output-themselves">
-                    
+                    <div class="sp-output-itself"></div>
                 </div>
             </fieldset>
         </div>
