--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
             <fieldset class="sp-output-inner">
                 <legend class="sp-output-inner-header">Challenges:</legend>
                 <div class="sp-output-themselves">
-                    <div class="sp-output-itself"></div>
+                    <a href="" class="sp-output-itself">
+                        <div class="sp-output-itself-image-container">
+                            <img src="./assets/challenges/challenge-one.png" alt="challenge-one" class="sp-output-itself-image-itself">
+                        </div>
+                    </a>
                 </div>
             </fieldset>
         </div>
