--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
                         <div class="sp-output-itself-image-container">
                             <img src="./assets/challenges/challenge-one.png" alt="challenge-one" class="sp-output-itself-image-itself">
                         </div>
+                        <div class="sp-output-itself-info">
+                            <h3 class="sp-output-itself-info-challenge-name">Flip Card</h3>
+                            <p class="sp-output-itself-info-about-challenge">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus qui voluptatibus sequi maxime, dolore eaque atque nulla odio architecto totam eligendi id, eos ducimus magni praesentium ut nemo officiis suscipit?</p>
+                        </div>
                     </a>
                 </div>
             </fieldset>
