--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                             <p class="sp-output-itself-info-about-challenge">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus qui voluptatibus sequi maxime, dolore eaque atque nulla odio architecto totam eligendi id, eos ducimus magni praesentium ut nemo officiis suscipit?</p>
                             <hr class="sp-output-itself-info-divider">
                             <div class="sp-output-itself-info-languages">
-                                <h4 class="sp-output-itself-info-language-itself">HTML</h4>
-                                <h4 class="sp-output-itself-info-language-itself">CSS</h4>
-                                <h4 class="sp-output-itself-info-language-itself">JavaScript</h4>
+                                <h4 class="sp-output-itself-info-language-itself sp-output-itself-info-language-html">HTML</h4>
+                                <h4 class="sp-output-itself-info-language-itself sp-output-itself-info-language-css">CSS</h4>
+                                <h4 class="sp-output-itself-info-language-itself sp-output-itself-info-language-javascript">JavaScript</h4>
                             </div>
                         </div>
                     </a>
