--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/navbar.css">
-    <link rel="stylesheet" href="./styles/input.css">
 </head>
 <body>
 
@@ -77,5 +76,6 @@
     </div>
     
     <script src="./scripts/theme.js"></script>
+    <script src="./scripts/content-upload.js"></script>
 </body>
 </html>
