--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <fieldset class="sp-output-inner">
                 <legend class="sp-output-inner-header">Challenges:</legend>
                 <div class="sp-output-themselves">
-                    <a href="" class="sp-output-itself">
+                    <!-- <a href="" class="sp-output-itself">
                         <div class="sp-output-itself-image-container">
                             <img src="./assets/challenges/challenge-one.png" alt="challenge-one" class="sp-output-itself-image-itself">
                         </div>
@@ -69,7 +69,7 @@
                                 <h4 class="sp-output-itself-info-language-itself sp-output-itself-info-language-javascript">JavaScript</h4>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
             </fieldset>
         </div>
