--- a/index.html
+++ b/index.html
@@ -77,5 +77,6 @@
     
     <script src="./scripts/theme.js"></script>
     <script src="./scripts/content-upload.js"></script>
+    <script src="./scripts/search.js"></script>
 </body>
 </html>
