--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </nav>
     
     <!-- SOLVE PROBLEMS CONTAINER -->
-    <!-- <div class="sp-container">
+    <div class="sp-container">
         <div class="sp-container-input">
             <div class="sp-container-header">
                 <h1 class="sp-header">The place filled with challenges to improve your web-development skills.</h1>
@@ -68,7 +68,7 @@
                 </div>
             </fieldset>
         </div>
-    </div> -->
+    </div>
     
     <script src="./scripts/theme.js"></script>
     <script src="./scripts/navbar.js"></script>
