--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <form class="sp-container-input-inner">
                 <input type="text" placeholder="Search for a challenge... e.g., Calculator, Stopwatch." id="searchInput" class="sp-container-input-itself">
-                <button type="submit" class="sp-container-input-button" id="searchButton">Search</button>
+                <!-- <button type="submit" class="sp-container-input-button" id="searchButton">Search</button> -->
             </form>
         </div>
         <div class="sp-output">
