--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <fieldset class="sp-output-inner">
                 <legend class="sp-output-inner-header">Challenges:</legend>
                 <div class="sp-output-themselves">
+                    <div class="sp-output-themselves-paragraph">No results found.</div>
                 </div>
             </fieldset>
         </div>
