--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
             </div>
             <form class="sp-container-input-inner">
                 <input type="text" placeholder="Search for a challenge... e.g., Calculator, Stopwatch." id="searchInput" class="sp-container-input-itself">
-                <!-- <button type="submit" class="sp-container-input-button" id="searchButton">Search</button> -->
             </form>
         </div>
         <div class="sp-output">
             <fieldset class="sp-output-inner">
                 <legend class="sp-output-inner-header">Challenges:</legend>
                 <div class="sp-output-themselves">
-                    <div class="sp-output-themselves-paragraph">No results found.</div>
+                    <!-- <div class="sp-output-themselves-paragraph">No results found.</div> -->
                 </div>
             </fieldset>
         </div>
