--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -14,12 +14,12 @@
     <nav>
         <div class="navbar-visible">
             <div class="navbar-logo-container">
-                <a href="./" class="navbar-logo">
-                    <img src="./assets/logo-light.png" alt="website logo" class="navbar-logo-itself">
+                <a href="../index.html" class="navbar-logo">
+                    <img src="../assets/logo-light.png" alt="website logo" class="navbar-logo-itself">
                 </a>
             </div>
             <div class="navbar-links">
-                <a href="./" class="navbar-link">Home</a>
+                <a href="../index.html" class="navbar-link">Home</a>
                 <a href="" class="navbar-link">Challenges</a>
             </div>
             <div class="navbar-buttons">
