--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -48,6 +48,11 @@
             <a href="" class="navbar-dropdown-link">Challenges</a>
         </div>
     </nav>
+
+    <!-- CHALLENGE -->
+    <div class="challenge-container">
+        
+    </div>
     
     <script src="../scripts/display-data.js"></script>
     <script src="../scripts/navbar.js"></script>
