--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -51,7 +51,10 @@
 
     <!-- CHALLENGE -->
     <div class="challenge-container">
-        
+        <div class="challenge-header">
+            <h1 class="challenge-header-itself"></h1>
+            <p class="challenge-header-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt laboriosam harum earum consectetur labore assumenda optio eligendi consequuntur omnis cum officia hic, repellat nemo ea nulla ipsa esse. Aliquid, inventore!</p>
+        </div>
     </div>
     
     <script src="../scripts/display-data.js"></script>
