--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -52,8 +52,15 @@
     <!-- CHALLENGE -->
     <div class="challenge-container">
         <div class="challenge-header">
-            <h1 class="challenge-header-itself"></h1>
-            <p class="challenge-header-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt laboriosam harum earum consectetur labore assumenda optio eligendi consequuntur omnis cum officia hic, repellat nemo ea nulla ipsa esse. Aliquid, inventore!</p>
+            <div class="challenge-header-info">
+                <h1 class="challenge-header-itself">Macbook</h1>
+                <p class="challenge-header-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt laboriosam harum earum consectetur labore assumenda optio eligendi consequuntur omnis cum officia hic, repellat nemo ea nulla ipsa esse. Aliquid, inventore!
+                </p>
+            </div>
+            <div class="challenge-header-grid">
+                <a href="" target="_blank" class="challenge-header-grid-child">GitHub</a>
+                <a href="" target="_blank" class="challenge-header-grid-child">Live</a>
+            </div>
         </div>
     </div>
     
