--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -62,6 +62,9 @@
                 <a href="" target="_blank" class="challenge-header-grid-child">Live</a>
             </div>
         </div>
+        <div class="challenge-image">
+            <img src="../assets/challenges/challenge-one.png" class="challenge-image-itself">
+        </div>
     </div>
     
     <script src="../scripts/display-data.js"></script>
