--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -65,6 +65,9 @@
         <div class="challenge-image">
             <img src="../assets/challenges/challenge-one.png" class="challenge-image-itself">
         </div>
+        <div class="challenge-detailed-info">
+            
+        </div>
     </div>
     
     <script src="../scripts/display-data.js"></script>
