--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -58,15 +58,16 @@
                 </p>
             </div>
             <div class="challenge-header-grid">
-                <a href="" target="_blank" class="challenge-header-grid-child">GitHub</a>
-                <a href="" target="_blank" class="challenge-header-grid-child">Live</a>
+                <div class="challenge-header-grid-child">Difficulty: Hard</div>
+                <a href="" target="_blank" class="challenge-header-grid-child-link">GitHub</a>
+                <a href="" target="_blank" class="challenge-header-grid-child-link">Live</a>
             </div>
         </div>
         <div class="challenge-image">
             <img src="../assets/challenges/challenge-one.png" class="challenge-image-itself">
         </div>
         <div class="challenge-detailed-info">
-            
+
         </div>
     </div>
     
