--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -58,9 +58,9 @@
                 </p>
             </div>
             <div class="challenge-header-grid">
-                <div class="challenge-header-grid-child">Difficulty: Hard</div>
-                <a href="" target="_blank" class="challenge-header-grid-child-link">GitHub</a>
-                <a href="" target="_blank" class="challenge-header-grid-child-link">Live</a>
+                <div class="challenge-header-grid-child">Difficulty: <span id="challengeDifficultyText"></span></div>
+                <a href="" target="_blank" class="challenge-header-grid-child-link" id="githubLink">GitHub</a>
+                <a href="" target="_blank" class="challenge-header-grid-child-link" id="liveLink">Live</a>
             </div>
         </div>
         <div class="challenge-image">
