--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -68,7 +68,7 @@
         </div>
         <div class="challenge-detailed-info">
             <h2 class="challenge-detailed-info-subheader">Challenge Breakdown:</h2>
-            <p class="challenge-detailed-info-paragraph">This project provides an immersive challenge by simulating a MacBook interface entirely through HTML, CSS, and JavaScript. It includes fully interactive applications like Photos, Notes, Safari, and Settings, each designed to mimic their real-world counterparts. Users will dive deep into creating responsive layouts using advanced CSS techniques like flexbox and grid. Additionally, this project involves state management for individual apps, enabling dynamic content rendering and smooth animations. By building this interface, users will strengthen their understanding of creating modular, scalable code and mastering event handling to produce a seamless user experience. This is an ideal challenge for those seeking to build complex, real-world user interfaces.</p>
+            <p class="challenge-detailed-info-paragraph"></p>
         </div>
     </div>
     
