--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -53,9 +53,8 @@
     <div class="challenge-container">
         <div class="challenge-header">
             <div class="challenge-header-info">
-                <h1 class="challenge-header-itself">Macbook</h1>
-                <p class="challenge-header-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt laboriosam harum earum consectetur labore assumenda optio eligendi consequuntur omnis cum officia hic, repellat nemo ea nulla ipsa esse. Aliquid, inventore!
-                </p>
+                <h1 class="challenge-header-itself"></h1>
+                <p class="challenge-header-paragraph"></p>
             </div>
             <div class="challenge-header-grid">
                 <div class="challenge-header-grid-child">Difficulty: <span id="challengeDifficultyText"></span></div>
