--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/navbar.css">
     <link name="icon" rel="icon" href="./assets/logo-light.png">
+    <link rel="stylesheet" href="./styles/theme-light-mode.css">
 </head>
 <body>
 
