--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Challenge Name</title>
+    <title class="challenge-name-in-title">Challenge Name</title>
     <link rel="stylesheet" href="../styles/navbar.css">
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/show-challenge.css">
