--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav>
+    <nav class="navbar-itself">
         <div class="navbar-visible">
             <div class="navbar-logo-container">
                 <a href="./" class="navbar-logo">
