--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title class="challenge-name-in-title">Challenge Name</title>
+    <title class="challenge-name-in-title"></title>
     <link rel="stylesheet" href="../styles/navbar.css">
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/show-challenge.css">
@@ -11,7 +11,7 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav>
+    <nav class="navbar-challenge">
         <div class="navbar-visible">
             <div class="navbar-logo-container">
                 <a href="../index.html" class="navbar-logo">
@@ -71,8 +71,8 @@
         </div>
     </div>
     
-    <script src="../scripts/display-data.js"></script>
-    <script src="../scripts/navbar.js"></script>
     <script src="../scripts/theme.js"></script>
+    <script src="../scripts/navbar.js"></script>
+    <script src="../scripts/display-data.js"></script>
 </body>
 </html>
