--- a/pages/show-challenge.html
+++ b/pages/show-challenge.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styles/navbar.css">
     <link rel="stylesheet" href="../styles/reset.css">
     <link rel="stylesheet" href="../styles/show-challenge.css">
+    <link name="icon" rel="icon" href="../assets/logo-light.png">
     <link rel="stylesheet" href="../styles/theme-light-mode.css">
 </head>
 <body>
